linter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    COMMENT_MULTI
    COMMENT_SINGLE
    NEWLINE

Grammar

Rule 0     S' -> code
Rule 1     code -> empty
Rule 2     code -> statement
Rule 3     code -> statement terminator code
Rule 4     statement -> controlstructure
Rule 5     statement -> assignment
Rule 6     statement -> binaryexp
Rule 7     statement -> nularexp
Rule 8     statement -> unaryexp
Rule 9     statement -> primaryexp
Rule 10    terminator -> SEMI_COLON
Rule 11    terminator -> COMMA
Rule 12    controlstructure -> ifstatement
Rule 13    controlstructure -> whileloop
Rule 14    controlstructure -> forloop
Rule 15    controlstructure -> withstatement
Rule 16    controlstructure -> foreachloop
Rule 17    controlstructure -> switchstatement
Rule 18    helpertype -> iftype
Rule 19    helpertype -> whiletype
Rule 20    helpertype -> fortype
Rule 21    helpertype -> withtype
Rule 22    case -> CASE primaryexp COLON bracedexp
Rule 23    case -> CASE primaryexp
Rule 24    case -> DEFAULT bracedexp
Rule 25    switchstatement -> SWITCH LPAREN primaryexp RPAREN DO LBRACE switchbody RBRACE
Rule 26    switchbody -> empty
Rule 27    switchbody -> case
Rule 28    switchbody -> case terminator switchbody
Rule 29    iftype -> IF bracedexp_condition
Rule 30    iftype -> IF LPAREN primaryexp RPAREN
Rule 31    ifstatement -> iftype THEN bracedexp ELSE bracedexp
Rule 32    ifstatement -> iftype THEN bracedexp
Rule 33    ifstatement -> iftype EXITWITH bracedexp
Rule 34    withtype -> WITH NAMESPACE
Rule 35    withstatementinit -> withtype DO
Rule 36    withstatement -> withstatementinit bracedexp
Rule 37    whiletype -> WHILE bracedexp_condition
Rule 38    whileloop -> whiletype DO bracedexp
Rule 39    foreachloop -> bracedexp FOREACH array
Rule 40    foreachloop -> bracedexp FOREACH primaryexp
Rule 41    foreachloop -> bracedexp FOREACH LPAREN primaryexp RPAREN
Rule 42    fortype -> FOR new_scope string FROM primaryexp TO primaryexp
Rule 43    fortype -> FOR new_scope string FROM primaryexp TO primaryexp STEP primaryexp
Rule 44    fortype -> FOR new_scope LSPAREN bracedexp_noscope COMMA bracedexp_condition COMMA bracedexp_noscope RSPAREN
Rule 45    forloop -> fortype DO bracedexp_noscope
Rule 46    bracedexp_condition -> LBRACE booleanexp RBRACE
Rule 47    bracedexp_condition -> identifier
Rule 48    bracedexp_noscope -> LBRACE code RBRACE
Rule 49    getvariable_ns -> NAMESPACE GETVARIABLE string
Rule 50    getvariable_ns -> NAMESPACE GETVARIABLE LSPAREN string COMMA primaryexp RSPAREN
Rule 51    getvariable_any -> primaryexp GETVARIABLE string
Rule 52    getvariable_any -> primaryexp GETVARIABLE LSPAREN string COMMA primaryexp RSPAREN
Rule 53    setvariable_ns -> NAMESPACE SETVARIABLE LSPAREN string COMMA primaryexp RSPAREN
Rule 54    setvariable_ns -> NAMESPACE SETVARIABLE LSPAREN string COMMA primaryexp COMMA booleanexp RSPAREN
Rule 55    setvariable_any -> primaryexp SETVARIABLE LSPAREN string COMMA primaryexp RSPAREN
Rule 56    setvariable_any -> primaryexp SETVARIABLE LSPAREN string COMMA primaryexp COMMA booleanexp RSPAREN
Rule 57    param_unary -> PARAM LSPAREN number RSPAREN
Rule 58    param_unary -> PARAM LSPAREN number COMMA primaryexp RSPAREN
Rule 59    param_unary -> PARAM LSPAREN number COMMA primaryexp COMMA array RSPAREN
Rule 60    param_unary -> PARAM LSPAREN number COMMA primaryexp COMMA array COMMA number RSPAREN
Rule 61    param_unary -> PARAM LSPAREN number COMMA primaryexp COMMA array COMMA array RSPAREN
Rule 62    param_binary -> primaryexp PARAM LSPAREN number RSPAREN
Rule 63    param_binary -> primaryexp PARAM LSPAREN number COMMA primaryexp RSPAREN
Rule 64    param_binary -> primaryexp PARAM LSPAREN number COMMA primaryexp COMMA array RSPAREN
Rule 65    param_binary -> primaryexp PARAM LSPAREN number COMMA primaryexp COMMA array COMMA number RSPAREN
Rule 66    param_binary -> primaryexp PARAM LSPAREN number COMMA primaryexp COMMA array COMMA array RSPAREN
Rule 67    params_unary -> PARAMS params_array
Rule 68    params_binary -> primaryexp PARAMS params_array
Rule 69    params_array -> LSPAREN RSPAREN
Rule 70    params_array -> LSPAREN params_element RSPAREN
Rule 71    params_element -> params_array_entry
Rule 72    params_element -> params_array_entry COMMA params_element
Rule 73    params_array_entry -> string
Rule 74    params_array_entry -> LSPAREN string COMMA primaryexp RSPAREN
Rule 75    params_array_entry -> LSPAREN string COMMA primaryexp COMMA array RSPAREN
Rule 76    params_array_entry -> LSPAREN string COMMA primaryexp COMMA array COMMA number RSPAREN
Rule 77    params_array_entry -> LSPAREN string COMMA primaryexp COMMA array COMMA array RSPAREN
Rule 78    vardefinition -> definition
Rule 79    vardefinition -> arraydefinition
Rule 80    assignment -> assignment_code code RBRACE
Rule 81    assignment -> definition EQUAL primaryexp
Rule 82    assignment -> variable EQUAL primaryexp
Rule 83    assignment_code -> definition EQUAL LBRACE
Rule 84    assignment_code -> variable EQUAL LBRACE
Rule 85    arraydefinition -> PRIVATE stringarray
Rule 86    definition -> PRIVATE PRIVATE_ID
Rule 87    definition -> PRIVATE string
Rule 88    identifier -> PRIVATE_ID
Rule 89    identifier -> GLOBAL_ID
Rule 90    variable -> PRIVATE_ID
Rule 91    variable -> GLOBAL_ID
Rule 92    binaryexp -> primaryexp BINARY_FNC primaryexp
Rule 93    binaryexp -> primaryexp comparisonoperator primaryexp
Rule 94    binaryexp -> primaryexp mathoperator primaryexp
Rule 95    binaryexp -> getvariable_ns
Rule 96    binaryexp -> getvariable_any
Rule 97    binaryexp -> setvariable_ns
Rule 98    binaryexp -> setvariable_any
Rule 99    binaryexp -> param_binary
Rule 100   binaryexp -> params_binary
Rule 101   primaryexp -> number
Rule 102   primaryexp -> identifier
Rule 103   primaryexp -> controlstructure
Rule 104   primaryexp -> helpertype
Rule 105   primaryexp -> array
Rule 106   primaryexp -> unaryexp
Rule 107   primaryexp -> nularexp
Rule 108   primaryexp -> string
Rule 109   primaryexp -> binaryexp
Rule 110   primaryexp -> bracedexp
Rule 111   primaryexp -> LPAREN primaryexp RPAREN
Rule 112   bracedexp -> LBRACE new_scope code RBRACE
Rule 113   bracedexp -> LBRACE RBRACE
Rule 114   new_scope -> <empty>
Rule 115   array -> LSPAREN RSPAREN
Rule 116   array -> LSPAREN arrayelement RSPAREN
Rule 117   arrayelement -> primaryexp
Rule 118   arrayelement -> primaryexp COMMA arrayelement
Rule 119   stringarray -> LSPAREN RSPAREN
Rule 120   stringarray -> LSPAREN stringarrayelement RSPAREN
Rule 121   stringarrayelement -> string
Rule 122   stringarrayelement -> string COMMA stringarrayelement
Rule 123   nularexp -> NULAR_FNC
Rule 124   nularexp -> identifier
Rule 125   unaryexp -> UNARY_FNC primaryexp
Rule 126   unaryexp -> PLUS primaryexp
Rule 127   unaryexp -> MINUS primaryexp
Rule 128   unaryexp -> NOT primaryexp
Rule 129   unaryexp -> vardefinition
Rule 130   unaryexp -> param_unary
Rule 131   unaryexp -> params_unary
Rule 132   comparisonoperator -> LT
Rule 133   comparisonoperator -> GT
Rule 134   comparisonoperator -> LTE
Rule 135   comparisonoperator -> GTE
Rule 136   comparisonoperator -> EQUALITY
Rule 137   comparisonoperator -> INEQUALITY
Rule 138   comparisonoperator -> AND
Rule 139   comparisonoperator -> OR
Rule 140   mathoperator -> PLUS
Rule 141   mathoperator -> MINUS
Rule 142   mathoperator -> TIMES
Rule 143   mathoperator -> DIVIDE
Rule 144   mathoperator -> MOD
Rule 145   mathoperator -> POW
Rule 146   booleanexp -> primaryexp
Rule 147   booleanexp -> primaryexp comparisonoperator booleanexp
Rule 148   booleanexp -> primaryexp comparisonoperator LBRACE booleanexp RBRACE
Rule 149   configaccessor -> GT GT
Rule 150   configaccessor -> DIVIDE
Rule 151   number -> NUMBER_REAL
Rule 152   number -> NUMBER_EXP
Rule 153   number -> NUMBER_HEX
Rule 154   string -> STRING_SINGLE
Rule 155   string -> STRING_DOUBLE
Rule 156   empty -> <empty>

Terminals, with rules where they appear

AND                  : 138
BINARY_FNC           : 92
BOOL                 : 
CASE                 : 22 23
COLON                : 22
COMMA                : 11 44 44 50 52 53 54 54 55 56 56 58 59 59 60 60 60 61 61 61 63 64 64 65 65 65 66 66 66 72 74 75 75 76 76 76 77 77 77 118 122
COMMENT_MULTI        : 
COMMENT_SINGLE       : 
DEFAULT              : 24
DIVIDE               : 143 150
DO                   : 25 35 38 45
ELSE                 : 31
EQUAL                : 81 82 83 84
EQUALITY             : 136
EXITWITH             : 33
FOR                  : 42 43 44
FOREACH              : 39 40 41
FROM                 : 42 43
GETVARIABLE          : 49 50 51 52
GLOBAL_ID            : 89 91
GT                   : 133 149 149
GTE                  : 135
IF                   : 29 30
INEQUALITY           : 137
LBRACE               : 25 46 48 83 84 112 113 148
LPAREN               : 25 30 41 111
LSPAREN              : 44 50 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 69 70 74 75 76 77 115 116 119 120
LT                   : 132
LTE                  : 134
MINUS                : 127 141
MOD                  : 144
NAMESPACE            : 34 49 50 53 54
NEWLINE              : 
NOT                  : 128
NULAR_FNC            : 123
NUMBER_EXP           : 152
NUMBER_HEX           : 153
NUMBER_REAL          : 151
OR                   : 139
PARAM                : 57 58 59 60 61 62 63 64 65 66
PARAMS               : 67 68
PLUS                 : 126 140
POW                  : 145
PRIVATE              : 85 86 87
PRIVATE_ID           : 86 88 90
RBRACE               : 25 46 48 80 112 113 148
RPAREN               : 25 30 41 111
RSPAREN              : 44 50 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 69 70 74 75 76 77 115 116 119 120
SEMI_COLON           : 10
SETVARIABLE          : 53 54 55 56
STEP                 : 43
STRING_DOUBLE        : 155
STRING_SINGLE        : 154
SWITCH               : 25
THEN                 : 31 32
TIMES                : 142
TO                   : 42 43
UNARY_FNC            : 125
WHILE                : 37
WITH                 : 34
error                : 

Nonterminals, with rules where they appear

array                : 39 59 60 61 61 64 65 66 66 75 76 77 77 105
arraydefinition      : 79
arrayelement         : 116 118
assignment           : 5
assignment_code      : 80
binaryexp            : 6 109
booleanexp           : 46 54 56 147 148
bracedexp            : 22 24 31 31 32 33 36 38 39 40 41 110
bracedexp_condition  : 29 37 44
bracedexp_noscope    : 44 44 45
case                 : 27 28
code                 : 3 48 80 112 0
comparisonoperator   : 93 147 148
configaccessor       : 
controlstructure     : 4 103
definition           : 78 81 83
empty                : 1 26
foreachloop          : 16
forloop              : 14
fortype              : 20 45
getvariable_any      : 96
getvariable_ns       : 95
helpertype           : 104
identifier           : 47 102 124
ifstatement          : 12
iftype               : 18 31 32 33
mathoperator         : 94
new_scope            : 42 43 44 112
nularexp             : 7 107
number               : 57 58 59 60 60 61 62 63 64 65 65 66 76 101
param_binary         : 99
param_unary          : 130
params_array         : 67 68
params_array_entry   : 71 72
params_binary        : 100
params_element       : 70 72
params_unary         : 131
primaryexp           : 9 22 23 25 30 40 41 42 42 43 43 43 50 51 52 52 53 54 55 55 56 56 58 59 60 61 62 63 63 64 64 65 65 66 66 68 74 75 76 77 81 82 92 92 93 93 94 94 111 117 118 125 126 127 128 146 147 148
setvariable_any      : 98
setvariable_ns       : 97
statement            : 2 3
string               : 42 43 49 50 51 52 53 54 55 56 73 74 75 76 77 87 108 121 122
stringarray          : 85
stringarrayelement   : 120 122
switchbody           : 25 28
switchstatement      : 17
terminator           : 3 28
unaryexp             : 8 106
vardefinition        : 129
variable             : 82 84
whileloop            : 13
whiletype            : 19 38
withstatement        : 15
withstatementinit    : 36
withtype             : 21 35

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . empty
    (2) code -> . statement
    (3) code -> . statement terminator code
    (156) empty -> .
    (4) statement -> . controlstructure
    (5) statement -> . assignment
    (6) statement -> . binaryexp
    (7) statement -> . nularexp
    (8) statement -> . unaryexp
    (9) statement -> . primaryexp
    (12) controlstructure -> . ifstatement
    (13) controlstructure -> . whileloop
    (14) controlstructure -> . forloop
    (15) controlstructure -> . withstatement
    (16) controlstructure -> . foreachloop
    (17) controlstructure -> . switchstatement
    (80) assignment -> . assignment_code code RBRACE
    (81) assignment -> . definition EQUAL primaryexp
    (82) assignment -> . variable EQUAL primaryexp
    (92) binaryexp -> . primaryexp BINARY_FNC primaryexp
    (93) binaryexp -> . primaryexp comparisonoperator primaryexp
    (94) binaryexp -> . primaryexp mathoperator primaryexp
    (95) binaryexp -> . getvariable_ns
    (96) binaryexp -> . getvariable_any
    (97) binaryexp -> . setvariable_ns
    (98) binaryexp -> . setvariable_any
    (99) binaryexp -> . param_binary
    (100) binaryexp -> . params_binary
    (123) nularexp -> . NULAR_FNC
    (124) nularexp -> . identifier
    (125) unaryexp -> . UNARY_FNC primaryexp
    (126) unaryexp -> . PLUS primaryexp
    (127) unaryexp -> . MINUS primaryexp
    (128) unaryexp -> . NOT primaryexp
    (129) unaryexp -> . vardefinition
    (130) unaryexp -> . param_unary
    (131) unaryexp -> . params_unary
    (101) primaryexp -> . number
    (102) primaryexp -> . identifier
    (103) primaryexp -> . controlstructure
    (104) primaryexp -> . helpertype
    (105) primaryexp -> . array
    (106) primaryexp -> . unaryexp
    (107) primaryexp -> . nularexp
    (108) primaryexp -> . string
    (109) primaryexp -> . binaryexp
    (110) primaryexp -> . bracedexp
    (111) primaryexp -> . LPAREN primaryexp RPAREN
    (31) ifstatement -> . iftype THEN bracedexp ELSE bracedexp
    (32) ifstatement -> . iftype THEN bracedexp
    (33) ifstatement -> . iftype EXITWITH bracedexp
    (38) whileloop -> . whiletype DO bracedexp
    (45) forloop -> . fortype DO bracedexp_noscope
    (36) withstatement -> . withstatementinit bracedexp
    (39) foreachloop -> . bracedexp FOREACH array
    (40) foreachloop -> . bracedexp FOREACH primaryexp
    (41) foreachloop -> . bracedexp FOREACH LPAREN primaryexp RPAREN
    (25) switchstatement -> . SWITCH LPAREN primaryexp RPAREN DO LBRACE switchbody RBRACE
    (83) assignment_code -> . definition EQUAL LBRACE
    (84) assignment_code -> . variable EQUAL LBRACE
    (86) definition -> . PRIVATE PRIVATE_ID
    (87) definition -> . PRIVATE string
    (90) variable -> . PRIVATE_ID
    (91) variable -> . GLOBAL_ID
    (49) getvariable_ns -> . NAMESPACE GETVARIABLE string
    (50) getvariable_ns -> . NAMESPACE GETVARIABLE LSPAREN string COMMA primaryexp RSPAREN
    (51) getvariable_any -> . primaryexp GETVARIABLE string
    (52) getvariable_any -> . primaryexp GETVARIABLE LSPAREN string COMMA primaryexp RSPAREN
    (53) setvariable_ns -> . NAMESPACE SETVARIABLE LSPAREN string COMMA primaryexp RSPAREN
    (54) setvariable_ns -> . NAMESPACE SETVARIABLE LSPAREN string COMMA primaryexp COMMA booleanexp RSPAREN
    (55) setvariable_any -> . primaryexp SETVARIABLE LSPAREN string COMMA primaryexp RSPAREN
    (56) setvariable_any -> . primaryexp SETVARIABLE LSPAREN string COMMA primaryexp COMMA booleanexp RSPAREN
    (62) param_binary -> . primaryexp PARAM LSPAREN number RSPAREN
    (63) param_binary -> . primaryexp PARAM LSPAREN number COMMA primaryexp RSPAREN
    (64) param_binary -> . primaryexp PARAM LSPAREN number COMMA primaryexp COMMA array RSPAREN
    (65) param_binary -> . primaryexp PARAM LSPAREN number COMMA primaryexp COMMA array COMMA number RSPAREN
    (66) param_binary -> . primaryexp PARAM LSPAREN number COMMA primaryexp COMMA array COMMA array RSPAREN
    (68) params_binary -> . primaryexp PARAMS params_array
    (88) identifier -> . PRIVATE_ID
    (89) identifier -> . GLOBAL_ID
    (78) vardefinition -> . definition
    (79) vardefinition -> . arraydefinition
    (57) param_unary -> . PARAM LSPAREN number RSPAREN
    (58) param_unary -> . PARAM LSPAREN number COMMA primaryexp RSPAREN
    (59) param_unary -> . PARAM LSPAREN number COMMA primaryexp COMMA array RSPAREN
    (60) param_unary -> . PARAM LSPAREN number COMMA primaryexp COMMA array COMMA number RSPAREN
    (61) param_unary -> . PARAM LSPAREN number COMMA primaryexp COMMA array COMMA array RSPAREN
    (67) params_unary -> . PARAMS params_array
    (151) number -> . NUMBER_REAL
    (152) number -> . NUMBER_EXP
    (153) number -> . NUMBER_HEX
    (18) helpertype -> . iftype
    (19) helpertype -> . whiletype
    (20) helpertype -> . fortype
    (21) helpertype -> . withtype
    (115) array -> . LSPAREN RSPAREN
    (116) array -> . LSPAREN arrayelement RSPAREN
    (154) string -> . STRING_SINGLE
    (155) string -> . STRING_DOUBLE
    (112) bracedexp -> . LBRACE new_scope code RBRACE
    (113) bracedexp -> . LBRACE RBRACE
    (29) iftype -> . IF bracedexp_condition
    (30) iftype -> . IF LPAREN primaryexp RPAREN
    (37) whiletype -> . WHILE bracedexp_condition
    (42) fortype -> . FOR new_scope string FROM primaryexp TO primaryexp
    (43) fortype -> . FOR new_scope string FROM primaryexp TO primaryexp STEP primaryexp
    (44) fortype -> . FOR new_scope LSPAREN bracedexp_noscope COMMA bracedexp_condition COMMA bracedexp_noscope RSPAREN
    (35) withstatementinit -> . withtype DO
    (85) arraydefinition -> . PRIVATE stringarray
    (34) withtype -> . WITH NAMESPACE

    $end            reduce using rule 156 (empty -> .)
    NULAR_FNC       shift and go to state 25
    UNARY_FNC       shift and go to state 27
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    LPAREN          shift and go to state 39
    SWITCH          shift and go to state 44
    PRIVATE         shift and go to state 46
    PRIVATE_ID      shift and go to state 47
    GLOBAL_ID       shift and go to state 48
    NAMESPACE       shift and go to state 49
    PARAM           shift and go to state 51
    PARAMS          shift and go to state 52
    NUMBER_REAL     shift and go to state 54
    NUMBER_EXP      shift and go to state 55
    NUMBER_HEX      shift and go to state 56
    LSPAREN         shift and go to state 50
    STRING_SINGLE   shift and go to state 58
    STRING_DOUBLE   shift and go to state 59
    LBRACE          shift and go to state 45
    IF              shift and go to state 60
    WHILE           shift and go to state 61
    FOR             shift and go to state 62
    WITH            shift and go to state 63

    code                           shift and go to state 1
    empty                          shift and go to state 2
    statement                      shift and go to state 3
    controlstructure               shift and go to state 4
    assignment                     shift and go to state 5
    binaryexp                      shift and go to state 6
    nularexp                       shift and go to state 7
    unaryexp                       shift and go to state 8
    primaryexp                     shift and go to state 9
    ifstatement                    shift and go to state 10
    whileloop                      shift and go to state 11
    forloop                        shift and go to state 12
    withstatement                  shift and go to state 13
    foreachloop                    shift and go to state 14
    switchstatement                shift and go to state 15
    assignment_code                shift and go to state 16
    definition                     shift and go to state 17
    variable                       shift and go to state 18
    getvariable_ns                 shift and go to state 19
    getvariable_any                shift and go to state 20
    setvariable_ns                 shift and go to state 21
    setvariable_any                shift and go to state 22
    param_binary                   shift and go to state 23
    params_binary                  shift and go to state 24
    identifier                     shift and go to state 26
    vardefinition                  shift and go to state 31
    param_unary                    shift and go to state 32
    params_unary                   shift and go to state 33
    number                         shift and go to state 34
    helpertype                     shift and go to state 35
    array                          shift and go to state 36
    string                         shift and go to state 37
    bracedexp                      shift and go to state 38
    iftype                         shift and go to state 40
    whiletype                      shift and go to state 41
    fortype                        shift and go to state 42
    withstatementinit              shift and go to state 43
    arraydefinition                shift and go to state 53
    withtype                       shift and go to state 57

state 1

    (0) S' -> code .



state 2

    (1) code -> empty .

    $end            reduce using rule 1 (code -> empty .)
    RBRACE          reduce using rule 1 (code -> empty .)


state 3

    (2) code -> statement .
    (3) code -> statement . terminator code
    (10) terminator -> . SEMI_COLON
    (11) terminator -> . COMMA

    $end            reduce using rule 2 (code -> statement .)
    RBRACE          reduce using rule 2 (code -> statement .)
    SEMI_COLON      shift and go to state 65
    COMMA           shift and go to state 66

    terminator                     shift and go to state 64

state 4

    (4) statement -> controlstructure .
    (103) primaryexp -> controlstructure .

  ! reduce/reduce conflict for SEMI_COLON resolved using rule 4 (statement -> controlstructure .)
  ! reduce/reduce conflict for COMMA resolved using rule 4 (statement -> controlstructure .)
  ! reduce/reduce conflict for $end resolved using rule 4 (statement -> controlstructure .)
  ! reduce/reduce conflict for RBRACE resolved using rule 4 (statement -> controlstructure .)
    SEMI_COLON      reduce using rule 4 (statement -> controlstructure .)
    COMMA           reduce using rule 4 (statement -> controlstructure .)
    $end            reduce using rule 4 (statement -> controlstructure .)
    RBRACE          reduce using rule 4 (statement -> controlstructure .)
    BINARY_FNC      reduce using rule 103 (primaryexp -> controlstructure .)
    GETVARIABLE     reduce using rule 103 (primaryexp -> controlstructure .)
    SETVARIABLE     reduce using rule 103 (primaryexp -> controlstructure .)
    PARAM           reduce using rule 103 (primaryexp -> controlstructure .)
    PARAMS          reduce using rule 103 (primaryexp -> controlstructure .)
    LT              reduce using rule 103 (primaryexp -> controlstructure .)
    GT              reduce using rule 103 (primaryexp -> controlstructure .)
    LTE             reduce using rule 103 (primaryexp -> controlstructure .)
    GTE             reduce using rule 103 (primaryexp -> controlstructure .)
    EQUALITY        reduce using rule 103 (primaryexp -> controlstructure .)
    INEQUALITY      reduce using rule 103 (primaryexp -> controlstructure .)
    AND             reduce using rule 103 (primaryexp -> controlstructure .)
    OR              reduce using rule 103 (primaryexp -> controlstructure .)
    PLUS            reduce using rule 103 (primaryexp -> controlstructure .)
    MINUS           reduce using rule 103 (primaryexp -> controlstructure .)
    TIMES           reduce using rule 103 (primaryexp -> controlstructure .)
    DIVIDE          reduce using rule 103 (primaryexp -> controlstructure .)
    MOD             reduce using rule 103 (primaryexp -> controlstructure .)
    POW             reduce using rule 103 (primaryexp -> controlstructure .)

  ! SEMI_COLON      [ reduce using rule 103 (primaryexp -> controlstructure .) ]
  ! COMMA           [ reduce using rule 103 (primaryexp -> controlstructure .) ]
  ! $end            [ reduce using rule 103 (primaryexp -> controlstructure .) ]
  ! RBRACE          [ reduce using rule 103 (primaryexp -> controlstructure .) ]


state 5

    (5) statement -> assignment .

    SEMI_COLON      reduce using rule 5 (statement -> assignment .)
    COMMA           reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> binaryexp .
    (109) primaryexp -> binaryexp .

  ! reduce/reduce conflict for SEMI_COLON resolved using rule 6 (statement -> binaryexp .)
  ! reduce/reduce conflict for COMMA resolved using rule 6 (statement -> binaryexp .)
  ! reduce/reduce conflict for $end resolved using rule 6 (statement -> binaryexp .)
  ! reduce/reduce conflict for RBRACE resolved using rule 6 (statement -> binaryexp .)
    SEMI_COLON      reduce using rule 6 (statement -> binaryexp .)
    COMMA           reduce using rule 6 (statement -> binaryexp .)
    $end            reduce using rule 6 (statement -> binaryexp .)
    RBRACE          reduce using rule 6 (statement -> binaryexp .)
    BINARY_FNC      reduce using rule 109 (primaryexp -> binaryexp .)
    GETVARIABLE     reduce using rule 109 (primaryexp -> binaryexp .)
    SETVARIABLE     reduce using rule 109 (primaryexp -> binaryexp .)
    PARAM           reduce using rule 109 (primaryexp -> binaryexp .)
    PARAMS          reduce using rule 109 (primaryexp -> binaryexp .)
    LT              reduce using rule 109 (primaryexp -> binaryexp .)
    GT              reduce using rule 109 (primaryexp -> binaryexp .)
    LTE             reduce using rule 109 (primaryexp -> binaryexp .)
    GTE             reduce using rule 109 (primaryexp -> binaryexp .)
    EQUALITY        reduce using rule 109 (primaryexp -> binaryexp .)
    INEQUALITY      reduce using rule 109 (primaryexp -> binaryexp .)
    AND             reduce using rule 109 (primaryexp -> binaryexp .)
    OR              reduce using rule 109 (primaryexp -> binaryexp .)
    PLUS            reduce using rule 109 (primaryexp -> binaryexp .)
    MINUS           reduce using rule 109 (primaryexp -> binaryexp .)
    TIMES           reduce using rule 109 (primaryexp -> binaryexp .)
    DIVIDE          reduce using rule 109 (primaryexp -> binaryexp .)
    MOD             reduce using rule 109 (primaryexp -> binaryexp .)
    POW             reduce using rule 109 (primaryexp -> binaryexp .)

  ! SEMI_COLON      [ reduce using rule 109 (primaryexp -> binaryexp .) ]
  ! COMMA           [ reduce using rule 109 (primaryexp -> binaryexp .) ]
  ! $end            [ reduce using rule 109 (primaryexp -> binaryexp .) ]
  ! RBRACE          [ reduce using rule 109 (primaryexp -> binaryexp .) ]


state 7

    (7) statement -> nularexp .
    (107) primaryexp -> nularexp .

  ! reduce/reduce conflict for SEMI_COLON resolved using rule 7 (statement -> nularexp .)
  ! reduce/reduce conflict for COMMA resolved using rule 7 (statement -> nularexp .)
  ! reduce/reduce conflict for $end resolved using rule 7 (statement -> nularexp .)
  ! reduce/reduce conflict for RBRACE resolved using rule 7 (statement -> nularexp .)
    SEMI_COLON      reduce using rule 7 (statement -> nularexp .)
    COMMA           reduce using rule 7 (statement -> nularexp .)
    $end            reduce using rule 7 (statement -> nularexp .)
    RBRACE          reduce using rule 7 (statement -> nularexp .)
    BINARY_FNC      reduce using rule 107 (primaryexp -> nularexp .)
    GETVARIABLE     reduce using rule 107 (primaryexp -> nularexp .)
    SETVARIABLE     reduce using rule 107 (primaryexp -> nularexp .)
    PARAM           reduce using rule 107 (primaryexp -> nularexp .)
    PARAMS          reduce using rule 107 (primaryexp -> nularexp .)
    LT              reduce using rule 107 (primaryexp -> nularexp .)
    GT              reduce using rule 107 (primaryexp -> nularexp .)
    LTE             reduce using rule 107 (primaryexp -> nularexp .)
    GTE             reduce using rule 107 (primaryexp -> nularexp .)
    EQUALITY        reduce using rule 107 (primaryexp -> nularexp .)
    INEQUALITY      reduce using rule 107 (primaryexp -> nularexp .)
    AND             reduce using rule 107 (primaryexp -> nularexp .)
    OR              reduce using rule 107 (primaryexp -> nularexp .)
    PLUS            reduce using rule 107 (primaryexp -> nularexp .)
    MINUS           reduce using rule 107 (primaryexp -> nularexp .)
    TIMES           reduce using rule 107 (primaryexp -> nularexp .)
    DIVIDE          reduce using rule 107 (primaryexp -> nularexp .)
    MOD             reduce using rule 107 (primaryexp -> nularexp .)
    POW             reduce using rule 107 (primaryexp -> nularexp .)

  ! SEMI_COLON      [ reduce using rule 107 (primaryexp -> nularexp .) ]
  ! COMMA           [ reduce using rule 107 (primaryexp -> nularexp .) ]
  ! $end            [ reduce using rule 107 (primaryexp -> nularexp .) ]
  ! RBRACE          [ reduce using rule 107 (primaryexp -> nularexp .) ]


state 8

    (8) statement -> unaryexp .
    (106) primaryexp -> unaryexp .

  ! reduce/reduce conflict for SEMI_COLON resolved using rule 8 (statement -> unaryexp .)
  ! reduce/reduce conflict for COMMA resolved using rule 8 (statement -> unaryexp .)
  ! reduce/reduce conflict for $end resolved using rule 8 (statement -> unaryexp .)
  ! reduce/reduce conflict for RBRACE resolved using rule 8 (statement -> unaryexp .)
    SEMI_COLON      reduce using rule 8 (statement -> unaryexp .)
    COMMA           reduce using rule 8 (statement -> unaryexp .)
    $end            reduce using rule 8 (statement -> unaryexp .)
    RBRACE          reduce using rule 8 (statement -> unaryexp .)
    BINARY_FNC      reduce using rule 106 (primaryexp -> unaryexp .)
    GETVARIABLE     reduce using rule 106 (primaryexp -> unaryexp .)
    SETVARIABLE     reduce using rule 106 (primaryexp -> unaryexp .)
    PARAM           reduce using rule 106 (primaryexp -> unaryexp .)
    PARAMS          reduce using rule 106 (primaryexp -> unaryexp .)
    LT              reduce using rule 106 (primaryexp -> unaryexp .)
    GT              reduce using rule 106 (primaryexp -> unaryexp .)
    LTE             reduce using rule 106 (primaryexp -> unaryexp .)
    GTE             reduce using rule 106 (primaryexp -> unaryexp .)
    EQUALITY        reduce using rule 106 (primaryexp -> unaryexp .)
    INEQUALITY      reduce using rule 106 (primaryexp -> unaryexp .)
    AND             reduce using rule 106 (primaryexp -> unaryexp .)
    OR              reduce using rule 106 (primaryexp -> unaryexp .)
    PLUS            reduce using rule 106 (primaryexp -> unaryexp .)
    MINUS           reduce using rule 106 (primaryexp -> unaryexp .)
    TIMES           reduce using rule 106 (primaryexp -> unaryexp .)
    DIVIDE          reduce using rule 106 (primaryexp -> unaryexp .)
    MOD             reduce using rule 106 (primaryexp -> unaryexp .)
    POW             reduce using rule 106 (primaryexp -> unaryexp .)

  ! SEMI_COLON      [ reduce using rule 106 (primaryexp -> unaryexp .) ]
  ! COMMA           [ reduce using rule 106 (primaryexp -> unaryexp .) ]
  ! $end            [ reduce using rule 106 (primaryexp -> unaryexp .) ]
  ! RBRACE          [ reduce using rule 106 (primaryexp -> unaryexp .) ]


state 9
